# homeassistant-anio

./: .env.local  .gitignore  ANIO_API_DOCUMENTATION.md  CLAUDE.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml
.github/workflows/: tests.yml
.specify/memory/: constitution.md
custom_components/anio/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_tracker.py  entity.py  manifest.json  notify.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/anio/api/: __init__.py  auth.py  client.py  exceptions.py  models.py
custom_components/anio/translations/: de.json
specs/001-anio-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-anio-integration/checklists/: requirements.md
specs/001-anio-integration/contracts/: anio-api.yaml  ha-events.yaml  ha-services.yaml
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_device_tracker.py  test_init.py  test_integration.py  test_notify.py  test_select.py  test_sensor.py  test_switch.py
tests/api/: __init__.py  test_auth.py  test_client.py
